[package]
name = "protov"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive", "env"] }
dirs = "5.0.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
indoc = "2.0.5"
tempdir = "0.3.7"
test-log = { version = "0.2.16", features = ["trace"] }
